# pymodelserve

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/simple_echo/: model.py  model.yaml  requirements.txt
src/pymodelserve/: __init__.py
src/pymodelserve/cli/: __init__.py  commands.py
src/pymodelserve/config/: __init__.py  loader.py  schema.py
src/pymodelserve/contrib/: __init__.py
src/pymodelserve/contrib/django/: __init__.py  apps.py  registry.py  settings.py  views.py
src/pymodelserve/contrib/django/management/commands/: __init__.py  serve_models.py
src/pymodelserve/core/: __init__.py  client.py  ipc.py  manager.py  venv.py
src/pymodelserve/discovery/: __init__.py  finder.py
src/pymodelserve/health/: __init__.py  checker.py
tests/: __init__.py  conftest.py  django_settings.py  test_cli.py  test_client.py  test_config.py  test_discovery.py  test_django.py  test_health.py  test_ipc.py  test_manager.py  test_venv.py
